--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
-<!-- Favicon --><link rel="icon" href="evan.png">
+<!-- Favicon --><link rel="icon" href="Evan.png">
 </head>
 
 <style>
